# janascard-qsource3

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
docs/: requirements.txt
docs/source/: api.rst  conf.py  index.rst  usage.rst
qsource3/: __init__.py  massfilter.py  qsource3.py  qsource3driver.py
tests/: test01.py  test02.py  test_interp_fnc.py  test_massfilter.py  test_qsource3.py  test_qsource3driver.py
