# pyproject.toml
[build-system]
requires = ["setuptools>=45", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "qsource3"
dynamic = ["version"]
dependencies = [
    "scipy",
    "pymeasure",
    "sphinx-autoapi",
]

[tool.setuptools_scm]
# write_to = "janascard-qsource3/_version.py"
